--- a/flash/index.html
+++ b/flash/index.html
@@ -3,47 +3,47 @@
 	<head>
 		<title>MinesweeperApp</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<script type="text/javascript" src="swfobject.js"></script>
-		<script type="text/javascript">
-			<!-- Adobe recommends that developers use SWFObject2 for Flash Player detection. -->
-			<!-- For more information see the SWFObject page at Google code (http://code.google.com/p/swfobject/). -->
-			<!-- Information is also available on the Adobe Developer Connection Under "Detecting Flash Player versions and embedding SWF files with SWFObject 2" -->
-			<!-- Set to minimum required Flash Player version or 0 for no version detection -->
-			var swfVersionStr = "10.1.52";
-			<!-- xiSwfUrlStr can be used to define an express installer SWF. -->
-			var xiSwfUrlStr = "";
-			var flashvars = {};
-			var params = {};
-			params.quality = "high";
-			params.bgcolor = "#ffffff";
-			params.play = "true";
-			params.loop = "true";
-			params.wmode = "window";
-			params.scale = "showall";
-			params.menu = "true";
-			params.devicefont = "false";
-			params.salign = "";
-			params.allowscriptaccess = "sameDomain";
-			var attributes = {};
-			attributes.id = "MinesweeperApp";
-			attributes.name = "MinesweeperApp";
-			attributes.align = "middle";
-			swfobject.createCSS("html", "height:100%; background-color: #ffffff;");
-			swfobject.createCSS("body", "margin:0; padding:0; overflow:hidden; height:100%;");
-			swfobject.embedSWF(
-				"MinesweeperApp.swf", "flashContent",
-				"380", "380",
-				swfVersionStr, xiSwfUrlStr,
-				flashvars, params, attributes);
-		</script>
+		<style type="text/css" media="screen">
+		html, body { height:100%; background-color: #ffffff;}
+		body { margin:0; padding:0; overflow:hidden; }
+		#flashContent { width:100%; height:100%; }
+		</style>
 	</head>
 	<body>
-		<!-- SWFObject's dynamic embed method replaces this alternative HTML content for Flash content when enough JavaScript and Flash plug-in support is available. -->
 		<div id="flashContent">
-			<a href="http://www.adobe.com/go/getflash">
-				<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
-			</a>
-			<p>This page requires Flash Player version 10.1.52 or higher.</p>
+			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="380" height="380" id="MinesweeperApp" align="middle">
+				<param name="movie" value="MinesweeperApp.swf" />
+				<param name="quality" value="high" />
+				<param name="bgcolor" value="#ffffff" />
+				<param name="play" value="true" />
+				<param name="loop" value="true" />
+				<param name="wmode" value="window" />
+				<param name="scale" value="showall" />
+				<param name="menu" value="true" />
+				<param name="devicefont" value="false" />
+				<param name="salign" value="" />
+				<param name="allowScriptAccess" value="sameDomain" />
+				<!--[if !IE]>-->
+				<object type="application/x-shockwave-flash" data="MinesweeperApp.swf" width="380" height="380">
+					<param name="movie" value="MinesweeperApp.swf" />
+					<param name="quality" value="high" />
+					<param name="bgcolor" value="#ffffff" />
+					<param name="play" value="true" />
+					<param name="loop" value="true" />
+					<param name="wmode" value="window" />
+					<param name="scale" value="showall" />
+					<param name="menu" value="true" />
+					<param name="devicefont" value="false" />
+					<param name="salign" value="" />
+					<param name="allowScriptAccess" value="sameDomain" />
+				<!--<![endif]-->
+					<a href="http://www.adobe.com/go/getflash">
+						<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
+					</a>
+				<!--[if !IE]>-->
+				</object>
+				<!--<![endif]-->
+			</object>
 		</div>
 	</body>
 </html>
